# rust_by_example

./: README.md
attributes/: Cargo.toml  library.rlib  main  rary.rs
attributes/src/: main.rs
cargo_rbe/: Cargo.toml
cargo_rbe/src/: main.rs
cargo_rbe/tests/: my_other_test.rs  my_test.rs
conversion/: Cargo.toml
conversion/src/: main.rs
crates/: executable  executable.rs  library.rlib  rary.rs
custom-types/: Cargo.toml
custom-types/src/: main.rs
error_handling/: Cargo.toml
error_handling/src/: main.rs
expressions/: Cargo.toml
expressions/src/: main.rs
flow-of-control/: Cargo.toml
flow-of-control/src/: main.rs
functions/: Cargo.toml
functions/src/: main.rs
generics/: Cargo.toml
generics/src/: main.rs
helloworld/: Cargo.toml
helloworld/src/: main.rs
macro_rules/: Cargo.toml
macro_rules/src/: main.rs
modules/: Cargo.toml
modules/file_hierarchy/: split  split.rs
modules/src/: main.rs
primitives/: Cargo.toml
primitives/src/: main.rs
scope_rules/: Cargo.toml
scope_rules/src/: main.rs
std_lib_types/: Cargo.toml
std_lib_types/src/: main.rs
std_misc/: Cargo.toml  argument_parse.rs  hi.txt  match_args
std_misc/src/: main.rs
testing/: Cargo.toml
testing/src/: lib.rs  main.rs
testing/tests/: common.rs  integration_test.rs
traits/: Cargo.toml
traits/src/: main.rs
types/: Cargo.toml
types/src/: main.rs
unsafe_op_and_compatibility/: Cargo.toml  doc.rs  libdoc.rlib
unsafe_op_and_compatibility/src/: main.rs
varible-bindings/: Cargo.toml
varible-bindings/src/: main.rs
(+1 files in other folders)
